<resources>
    <string name="app_name">Cofi-Video-Downloader</string>
    <string name="link_text_box_hint">Enter Link</string>
    <string name="clipboard_button_display">CLIPBOARD</string>
    <string name="search_button_display">SEARCH</string>
    <string name="default_title">Default Title</string>
    <string name="download_button_display">DOWNLOAD</string>
    <string name="thumbnail_image_content_description">Thumbnail Image</string>
    <string name="conversion_as_mp4_text">As MP4</string>
    <string name="conversion_as_gif_text">As GIF</string>
    <string name="conversion_as_mp3_text">As MP3</string>
</resources>