<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:background="#232323" android:id="@+id/main_layout">
    <EditText
            android:layout_width="0dp"
            android:layout_height="49dp"
            android:inputType="textUri|textWebEditText|textPersonName"
            android:ems="10"
            android:id="@+id/link_text_box"
            android:textAlignment="center" android:textColor="@color/white"
            android:selectAllOnFocus="true" android:singleLine="true" android:fontFamily="sans-serif"
            android:backgroundTint="#FFFFFF" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" android:autofillHints="" android:hint="@string/link_text_box_hint"
            android:textColorHint="#80FFFFFF"/>
    <Button
            android:text="@string/clipboard_button_display"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/clipboard_button"
            app:iconTint="@color/white"
            app:icon="?attr/actionModePasteDrawable" app:iconPadding="-20dp"
            android:backgroundTint="@color/purple_200"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/link_text_box"
            android:layout_marginTop="5dp" android:textColor="@color/white" tools:ignore="TextContrastCheck"
    />
    <Button
            android:text="@string/search_button_display"
            android:layout_width="0dp"
            android:layout_height="48dp" android:id="@+id/search_button"
            app:iconTint="@color/white"
            app:icon="?android:attr/actionModeWebSearchDrawable" app:iconPadding="-20dp"
            android:backgroundTint="#BB86FC"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/clipboard_button"
            android:textColor="@color/white" tools:ignore="TextContrastCheck"/>
    <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="23dp"
            android:id="@+id/search_progress_bar"
            android:indeterminate="true"
            android:indeterminateTint="#8BC34A"
            app:layout_constraintTop_toBottomOf="@+id/search_button"
            android:layout_marginTop="5dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="489dp"
            android:id="@+id/result_layout"
            app:layout_constraintTop_toBottomOf="@+id/search_progress_bar" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent">

        <ImageView
                android:layout_width="262dp"
                android:layout_height="141dp" app:srcCompat="@android:drawable/ic_menu_gallery"
                android:id="@+id/thumbnail_image"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="65dp"
                android:layout_marginEnd="65dp" app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/thumbnail_image_content_description"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="108dp" android:id="@+id/title_text"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/thumbnail_image"
                android:textAlignment="center" android:text="@string/default_title"
                android:textSize="20sp"
                android:textColor="@color/white" android:textAllCaps="false" android:textIsSelectable="true"
        />
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="205dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="10dp"
                android:layout_marginTop="5dp" app:layout_constraintTop_toBottomOf="@+id/title_text"
                android:id="@+id/download_layout">

            <Button
                    android:text="@string/download_button_display"
                    android:layout_width="0dp"
                    android:layout_height="48dp" android:id="@+id/download_button"
                    app:iconTint="@color/white"
                    app:icon="@android:drawable/stat_sys_download" app:iconPadding="-20dp"
                    android:backgroundTint="#BB86FC"
                    android:textColor="@color/white"
                    tools:ignore="TextContrastCheck"
                    app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="10dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"/>
            <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:id="@+id/download_progress_bar"
                    android:progressTint="#8BC34A" android:progress="50" android:max="100"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="10dp" android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/download_button" android:indeterminateTint="#8BC34A"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp" android:id="@+id/download_progress_text"
                    app:layout_constraintTop_toBottomOf="@+id/download_progress_bar" android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp" app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="10dp"
                    android:id="@+id/conversion_layout" android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/download_progress_bar" android:layout_marginEnd="10dp"
                    app:layout_constraintEnd_toEndOf="parent">

                <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/conversion_video_button"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="5dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="5dp" app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_marginBottom="5dp" android:minWidth="48dp" android:minHeight="48dp"
                        android:textColor="@color/white" android:textAlignment="center"
                        android:text="@string/conversion_as_gif_text"
                        app:layout_constraintEnd_toStartOf="@+id/conversion_audio_button"
                        android:layout_marginEnd="5dp"/>
                <androidx.appcompat.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/conversion_audio_button"
                        android:minWidth="48dp" android:minHeight="48dp"
                        android:textColor="@color/white" android:textAlignment="center"
                        android:text="@string/conversion_as_mp3_text"
                        android:layout_marginStart="5dp"
                        app:layout_constraintStart_toEndOf="@+id/conversion_video_button"
                        app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="5dp"
                        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="5dp"
                        app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="5dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>